@@ -1,5 +1,10 @@
 2004-03-10 Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/vrml97node.cpp:  Removed cruft
+	associated with abstract_geometry_node.
+
+2004-03-10 Braden McDaniel  <braden@endoframe.com>
+
 	Removed cruft associated with the generic field mutator.
 
 	* src/libopenvrml/openvrml/vrml97node.cpp
